BB-23209: Add the ability to get tier prices for a specific product kit configuration (#39408)
- added "productkitprices" back-office API resource
- added support of a guest customer user in "customerprices" back-office API resource
- updated changelog and documentation
